--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ colored = "2.0"
 
 reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"], default-features = false }
 rpassword = "7.4"
+rustls = "0.23"
+webpki-roots = "0.26"
+sha2 = "0.10"
+hex = "0.4"
